<resources>
    <string name="app_name">Top News</string>
    <string name="facebook_app_id">395597661453283</string>
    <string name="fb_login_protocol_scheme">fb395597661453283</string>
    <string name="source">Source</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="template_date">21 December 1998</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="top_news">Top News</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account_create_one">Don\'t have an account? Create one.</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in.</string>
    <string name="news_description">Description</string>
    <string name="s">\@string/sign_in</string>

    <string name="topic_business">Business, Finance and Economics</string>
    <string name="topic_computers">Computers, Science and Technology</string>
    <string name="topic_entertainment">Entertainment</string>
    <string name="topic_medicine">Health and Medicine</string>
    <string name="topic_sports">Sports</string>
    <string name="next">Next</string>
    <string name="please_choose_3_topics">Please choose 3 topics</string>
    <string name="settings">Settings</string>
    <string name="topics">Topics</string>
    <string name="news">News</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">Refresh</string>
    <string name="save">Save</string>
    <string name="log_out">Log out</string>
    <string name="country">Country:</string>
    <string name="_21_december_2020">21 December 2020</string>
    <string name="search">Search</string>
    <string name="keyword_or_phrase_to_search_for">Keyword or phrase to search for</string>
    <string name="don_t_notify_me">Don\'t notify me</string>
    <string name="description">Description</string>
    <string name="_3">3</string>
    <string name="user_settings">User settings</string>
    <string name="get_local_news">Get local news!</string>
    <string name="find">Find</string>
    <string name="get_notified_when_new_stories_are_available">Get notified when new stories are available!</string>
    <string name="user_created">User created</string>
    <string name="user_creation_error">\"User creation error \"</string>
    <string name="sign_in_success">Sign in success</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="auth_failed">\"Authentication failed \"</string>
    <string name="users_already_exists">User already exists</string>
    <string name="inexistent_user">User does not exist</string>
    <string name="please_select_3_topics">Please select at least 3 topics</string>
    <string name="invalid_search">Invalid search</string>
    <string name="insert_country">Please insert a country</string>
    <string name="invalid_country">Invalid country</string>
    <string name="notifications_preferences_saved">Notifications preferences saved</string>
    <string name="notifications_off">Notifications off</string>
    <string name="business">business</string>
    <string name="technology">technology</string>
    <string name="entertainment">entertainment</string>
    <string name="health">health</string>
    <string name="sports">sports</string>
    <string name="NotificationTitle">Notification title</string>
    <string name="NotificationDescription">description</string>


</resources>