<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_settings"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="268dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/get_local_news"
        android:textColor="#070606"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <EditText
        android:id="@+id/inputCountry"
        android:layout_width="293dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/country"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button_find"
        android:layout_width="80dp"
        android:layout_height="44dp"
        android:text="@string/find"
        app:iconPadding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/divider7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toEndOf="@+id/inputCountry"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.865" />

    <View
        android:id="@+id/divider7"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCountry" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/get_notified_when_new_stories_are_available"
        android:textColor="#03A9F4"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider7" />

    <TextView

        android:id="@+id/tv_topicBusiness"
        android:layout_width="263dp"
        android:layout_height="34dp"
        android:layout_marginTop="28dp"
        android:maxLines="1"
        android:text="@string/topic_business"
        android:textColor="@color/colorPrimary"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/cbox_business"
        android:layout_width="29dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:onClick="onCboxBusinessClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_topicBusiness"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_topicComputer"
        android:layout_width="263dp"
        android:layout_height="34dp"
        android:layout_marginTop="24dp"
        android:maxLines="1"
        android:text="@string/topic_computers"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_topicBusiness" />

    <CheckBox
        android:id="@+id/cbox_tech"
        android:layout_width="29dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:onClick="onCboxComputersClicked"
        app:layout_constraintStart_toEndOf="@+id/tv_topicComputer"
        app:layout_constraintTop_toBottomOf="@+id/tv_topicBusiness" />

    <TextView
        android:id="@+id/tv_Art"
        android:layout_width="263dp"
        android:layout_height="34dp"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:text="@string/topic_entertainment"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_topicComputer" />

    <CheckBox
        android:id="@+id/cbox_art"
        android:layout_width="29dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:onClick="onCboxArtClicked"
        app:layout_constraintStart_toEndOf="@+id/tv_Art"
        app:layout_constraintTop_toBottomOf="@+id/tv_topicComputer" />

    <TextView
        android:id="@+id/tv_medicine"
        android:layout_width="263dp"
        android:layout_height="34dp"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:text="@string/topic_medicine"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Art" />

    <CheckBox
        android:id="@+id/cbox_medicine"
        android:layout_width="29dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:onClick="onCboxMedicineClicked"
        app:layout_constraintStart_toEndOf="@+id/tv_medicine"
        app:layout_constraintTop_toBottomOf="@+id/tv_Art" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="263dp"
        android:layout_height="34dp"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:text="@string/topic_sports"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_medicine" />

    <CheckBox
        android:id="@+id/cbox_sports"
        android:layout_width="29dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:onClick="onCboxSportsClicked"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/tv_medicine" />

    <Button
        android:id="@+id/button_savePref"
        android:layout_width="80dp"
        android:layout_height="44dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/save"
        android:textColor="#37D83E"
        app:iconPadding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/noNotifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btn_log_out"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="370dp"
        android:layout_height="45dp"
        android:bottomLeftRadius="0dp"
        android:bottomRightRadius="0dp"
        android:shape="rectangle"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textColor="#FF0000"
        android:textSize="15sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/noNotifications"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:text="@string/don_t_notify_me"
        android:textColor="#D32626"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.696" />

    <View
        android:id="@+id/divider10"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/btn_log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noNotifications"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>